--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,5 +9,9 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/fragment_choose_area"
-        android:name="com.coolweather.android.util.ChooseAreaFragment"/>
+        android:name="com.coolweather.android.ChooseAreaFragment"/>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text=""/>
 </FrameLayout>
