--- a/app/src/main/res/layout/choose_area.xml
+++ b/app/src/main/res/layout/choose_area.xml
@@ -2,32 +2,35 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#fff"
+    android:fitsSystemWindows="true"
     android:orientation="vertical">
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
         android:background="?attr/colorPrimary">
+
         <TextView
+            android:id="@+id/tv_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/tv_title"
             android:layout_centerInParent="true"
             android:textColor="#FFF"
-            android:textSize="20sp"/>
+            android:textSize="20sp" />
+
         <Button
+            android:id="@+id/but_back"
             android:layout_width="25dp"
             android:layout_height="25dp"
-            android:id="@+id/but_back"
-            android:layout_marginLeft="10dp"
             android:layout_alignParentLeft="true"
             android:layout_centerVertical="true"
-            android:background="@drawable/back"
-            />
+            android:layout_marginLeft="10dp"
+            android:background="@drawable/back" />
     </RelativeLayout>
 
     <ListView
+        android:id="@+id/list_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/list_view"></ListView>
+        android:layout_height="match_parent"></ListView>
 </LinearLayout>
