修复乱码，并添加了天气状态图

--- a/app/src/main/res/layout/forecast_item.xml
+++ b/app/src/main/res/layout/forecast_item.xml
@@ -2,8 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="15dp"
-   >
+    android:layout_margin="15dp">
 
     <TextView
         android:id="@+id/tv_data"
@@ -13,14 +12,26 @@
         android:layout_weight="2"
         android:textColor="#FFF" />
 
-    <TextView
-        android:id="@+id/tv_info"
+    <LinearLayout
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_vertical"
-        android:layout_weight="1"
-        android:gravity="center"
-        android:textColor="#FFF" />
+        android:layout_weight="1">
+
+        <ImageView
+            android:id="@+id/image_info"
+            android:layout_width="25dp"
+            android:layout_height="25dp"
+            android:layout_gravity="center" />
+
+        <TextView
+            android:id="@+id/tv_info"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:gravity="center"
+            android:textColor="#FFF" />
+    </LinearLayout>
+
 
     <TextView
         android:id="@+id/tv_max"
